--- a/css/main.css
+++ b/css/main.css
@@ -46,55 +46,84 @@ table {
   border-spacing: 0; }
 
 h1, h2, h3, h4, h5, h6, p, li {
-  font-family: 'Open Sans', serif; }
+  font-family: 'Open Sans', sans-serif; }
 
 h1 {
-  font-size: 2.8em;
+  font-family: 'Cormorant Infant', serif;
+  font-size: 5em;
   margin: 10px; }
 
 h2 {
-  font-size: 1.8em; }
+  font-family: 'Fjalla One', sans-serif;
+  font-size: 1.2em;
+  letter-spacing: 4px; }
 
 h3 {
-  font-size: 1.3em;
-  margin: 15px; }
+  font-family: 'Fjalla One', sans-serif;
+  font-size: .9em;
+  margin: 15px;
+  letter-spacing: 2px; }
+
+h4 {
+  font-family: 'Cormorant Infant', serif; }
+
+p {
+  font-size: 1em; }
+
+li {
+  font-family: 'Fjalla One', sans-serif; }
 
 body {
   box-sizing: border-box;
-  background-color: #181719;
+  background-color: #D1D1C9;
   color: #ffffff; }
   body::-webkit-scrollbar {
     display: none; }
 
-.container {
-  max-width: 1000px;
-  margin: 0 auto; }
-
-.static-elements {
+.hidden {
   display: none; }
 
-.landing {
+.hero {
   position: relative;
-  height: 100vh;
+  height: 500px;
   width: 100%;
-  background: url("../img/splash.jpg") center center no-repeat;
+  background: url("../img/hero-slide1.jpg") top center no-repeat;
   background-size: cover; }
-  .landing::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: linear-gradient(to bottom, white, black);
-    opacity: .7; }
+  @media screen and (min-width: 960px) {
+    .hero {
+      height: 100vh; } }
 
-.nav ul {
-  list-style: none; }
-  .nav ul li {
-    float: left;
-    padding: 20px 30px;
-    color: black; }
+.nav {
+  display: flex;
+  position: relative; }
+  .nav .logo {
+    position: relative; }
+    .nav .logo img {
+      height: 40px; }
+  .nav ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    list-style: none; }
+    .nav ul li {
+      position: relative;
+      flex-grow: 1;
+      padding: 20px 30px;
+      color: white; }
+      .nav ul li h3 {
+        float: left; }
+      .nav ul li img {
+        position: absolute;
+        top: 50%;
+        transform: translate(0, -50%); }
+        .nav ul li img#logo {
+          position: relative;
+          float: left; }
+  @media screen and (max-width: 960px) {
+    .nav ul {
+      display: none; }
+    .nav .menu-bar {
+      display: inline-block; } }
 
 .title {
   position: absolute;
@@ -107,33 +136,45 @@ body {
     height: 20px;
     width: auto; }
 
-.contact {
-  display: none; }
-
-.down-arrow img {
+.press-play {
   position: absolute;
   left: 50%;
   transform: translate(-50%, 0);
-  bottom: 5%;
-  height: 50px; }
-
-.project {
-  position: relative;
-  height: 100vh;
-  width: 100vw;
-  margin: auto; }
-  .project .project-content {
+  bottom: 5%; }
+  .press-play .button-back {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    background: white;
+    opacity: .5; }
+  .press-play img {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 80vw; }
-    .project .project-content .project-text {
-      float: left;
-      width: 35%;
-      margin-right: 5%; }
-    .project .project-content img {
-      width: 60%;
-      float: right; }
+    padding-left: 10px; }
+
+.scroll-prompt {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+  bottom: 30px;
+  height: 60px;
+  width: 170px;
+  background: #DC7725;
+  border-radius: 7px; }
+  .scroll-prompt h3 {
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+    text-align: center;
+    width: 100%;
+    margin: 0; }
+
+.activities {
+  position: relative;
+  height: auto;
+  width: 100%;
+  background-color: #D1D1C9; }
 
 /*# sourceMappingURL=main.css.map */
