--- a/scss/partials/_typography.scss
+++ b/scss/partials/_typography.scss
@@ -1,21 +1,34 @@
 h1, h2, h3, h4, h5, h6, p, li {
-  font-family: 'Open Sans', serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 h1 {
-  font-size: 2.8em;
+  font-family: 'Cormorant Infant', serif;
+  font-size: 5em;
   margin: 10px;
 }
 
 h2 {
-  font-size: 1.8em;
+  font-family: 'Fjalla One', sans-serif;
+  font-size: 1.2em;
+  letter-spacing: 4px;
 }
 
 h3 {
-  font-size: 1.3em;
+  font-family: 'Fjalla One', sans-serif;
+  font-size: .9em;
   margin: 15px;
+  letter-spacing: 2px;
+}
+
+h4 {
+  font-family: 'Cormorant Infant', serif;
+}
+
+p {
+  font-size: 1em;
 }
 
 li {
-
+  font-family: 'Fjalla One', sans-serif;
 }
