--- a/scss/partials/_typography.scss
+++ b/scss/partials/_typography.scss
@@ -6,18 +6,30 @@ h1 {
   font-family: 'Cormorant Infant', serif;
   font-size: 5em;
   margin: 10px;
+  @media screen and (max-width: 750px) {
+    font-size: 3.5em;
+  }
+  @media screen and (min-width: 960px) {
+    font-size: 7em;
+  }
 }
 
 h2 {
   font-family: 'Fjalla One', sans-serif;
   font-size: 1.2em;
   letter-spacing: 4px;
+  @media screen and (max-width: 750px) {
+    font-size: .85em;
+  }
+  @media screen and (min-width: 960px) {
+    letter-spacing: 4px;
+  }
 }
 
 h3 {
   font-family: 'Fjalla One', sans-serif;
   font-size: .9em;
-  margin: 15px;
+  margin: 5px;
   letter-spacing: 2px;
 }
 
