add rest of content for flex grid

--- a/scss/partials/_activities.scss
+++ b/scss/partials/_activities.scss
@@ -50,3 +50,23 @@
 #rafting {
   background-image: url("http://arcticwild.com/wp-content/themes/arcticwild/assets/img/trips/home-raft.jpg");
 }
+
+#base-camp-trips {
+  background-image: url("http://arcticwild.com/wp-content/themes/arcticwild/assets/img/trips/home-basecamp.jpg");
+}
+
+#backpacking-trips {
+  background-image: url("http://arcticwild.com/wp-content/themes/arcticwild/assets/img/trips/home-backpacking.jpg");
+}
+
+#canoe-trips {
+  background-image: url("http://arcticwild.com/wp-content/themes/arcticwild/assets/img/trips/home-canoe.jpg");
+}
+
+#photography-trips {
+  background-image: url("http://arcticwild.com/wp-content/themes/arcticwild/assets/img/trips/home-photo.jpg");
+}
+
+#custom-trips {
+  background-image: url("http://arcticwild.com/wp-content/themes/arcticwild/assets/img/trips/home-custom.jpg");
+}
