--- a/css/main.css
+++ b/css/main.css
@@ -160,7 +160,7 @@ body {
 
 .title {
   position: relative;
-  margin: 8% auto;
+  margin: 2% auto;
   width: 100%;
   text-align: center; }
   .title #alaska {
@@ -260,5 +260,20 @@ body {
 
 #rafting {
   background-image: url("http://arcticwild.com/wp-content/themes/arcticwild/assets/img/trips/home-raft.jpg"); }
+
+#base-camp-trips {
+  background-image: url("http://arcticwild.com/wp-content/themes/arcticwild/assets/img/trips/home-basecamp.jpg"); }
+
+#backpacking-trips {
+  background-image: url("http://arcticwild.com/wp-content/themes/arcticwild/assets/img/trips/home-backpacking.jpg"); }
+
+#canoe-trips {
+  background-image: url("http://arcticwild.com/wp-content/themes/arcticwild/assets/img/trips/home-canoe.jpg"); }
+
+#photography-trips {
+  background-image: url("http://arcticwild.com/wp-content/themes/arcticwild/assets/img/trips/home-photo.jpg"); }
+
+#custom-trips {
+  background-image: url("http://arcticwild.com/wp-content/themes/arcticwild/assets/img/trips/home-custom.jpg"); }
 
 /*# sourceMappingURL=main.css.map */
