--- a/scss/partials/_activities.scss
+++ b/scss/partials/_activities.scss
@@ -1,47 +1,68 @@
 .activities {
   position: relative;
-  height: auto;
-  width: 100%;
-  .activity-tile {
-    position: relative;
-    height: 450px;
-    width: 90%;
-    margin: 5%;
-    background: center center no-repeat;
-    background-size: cover;
-    .activity-icon {
-      display: block;
-      position: absolute;
-      @include full-center;
-      height: 60px;
-      .icon-back {
+  .row {
+    @media screen and (min-width: 750px) {
+      display: flex;
+      flex-wrap: wrap;
+    }
+    @media screen and (min-width: 960px) {
+      flex-wrap: nowrap;
+    }
+    width: 100%;
+    .activity-tile {
+      position: relative;
+      height: 450px;
+      width: 90%;
+      margin: 5%;
+      background: center center no-repeat;
+      background-size: cover;
+      @media screen and (min-width: 750px) {
+        width: 50%;
+        margin: 0;
+        &.big {
+          flex-grow: 2;
+        }
+        &.small {
+          flex-grow: 1;
+        }
+      }
+      @media screen and (min-width: 960px) {
+
+      }
+      .activity-icon {
+        display: block;
         position: absolute;
         @include full-center;
         height: 60px;
-        width: 60px;
-        border-radius: 50%;
-        background: #444444;
-        opacity: .6;
+        .icon-back {
+          position: absolute;
+          @include full-center;
+          height: 60px;
+          width: 60px;
+          border-radius: 50%;
+          background: #444444;
+          opacity: .6;
+        }
+        img {
+          position: absolute;
+          @include full-center;
+          height: 35px;
+        }
       }
-      img {
+      .activity-text {
         position: absolute;
-        @include full-center;
-        height: 35px;
-      }
-    }
-    .activity-text {
-      position: absolute;
-      left: 40px;
-      bottom: 40px;
-      .activity-bar {
-        height: 5px;
-        width: 30px;
-        background: $highlight;
-      }
-      h3 {
-        font-size: 1.2em;
-        margin: 0;
-        margin-top: 15px;
+        left: 40px;
+        bottom: 40px;
+        .activity-bar {
+          height: 5px;
+          width: 30px;
+          background: $highlight;
+        }
+        h3 {
+          font-size: 1.2em;
+          margin: 0;
+          margin-top: 15px;
+        }
       }
     }
   }
