--- a/scss/partials/_hero.scss
+++ b/scss/partials/_hero.scss
@@ -96,8 +96,13 @@
 }
 
 .press-play {
+  display: inline-block;
   position: relative;
   margin: 0 auto;
+  transition: all .2s linear;
+  &:hover {
+    transform: scale(1.15);
+  }
   .button-back {
     margin: 0 auto;
     height: 100px;
@@ -105,6 +110,10 @@
     border-radius: 50%;
     background: white;
     opacity: .5;
+    &:hover {
+      opacity: .7;
+      z-index: 1;
+    }
   }
   img {
     position: absolute;
