make a fix in the stylesheet link

--- a/scss/partials/_activities.scss
+++ b/scss/partials/_activities.scss
@@ -12,12 +12,11 @@
     .activity-tile {
       position: relative;
       height: 450px;
-      width: 90%;
       margin: 5%;
       background: center center no-repeat;
       background-size: cover;
       @media screen and (min-width: 750px) {
-        width: 50%;
+        min-width: 50%;
         margin: 0;
         &.big {
           flex-grow: 2;
